--- a/R/7-kappa-coef.Rmd
+++ b/R/7-kappa-coef.Rmd
@@ -103,15 +103,16 @@ needle.pls <- read_rds(here('data', 'models', 'needle-pls.rds'))
 
 ```{r}
 # for PCA regression
-# pcr <- control.pcas[[5]]
+# pcr <- control.pcas[[3]]
 
 conf_pcr <- function(pcr){
   # Separate PCA and regression parts
   pca <- pcr$pca
-  reg <- pcr$lm
+  reg <- pcr$glm
   
   # Which PCs were significant in the regression?
   pcs <- reg %>% 
+    car::Anova() %>% 
     broom::tidy() %>% 
     filter(p.value < 0.05 & term != "(Intercept)") %>% 
     .$term %>%
@@ -122,7 +123,7 @@ conf_pcr <- function(pcr){
     get_scores() %>%
     select(!!!pcs)
   
-  data <- test$pca@suppLs$xModelMN
+  data <- pcr$pca@suppLs$xModelMN
 
   #figure out appropriate cutoff by solving for the r that gives p < 0.05 given n
   n = pca@descriptionMC[1,1] %>% as.numeric()
@@ -143,7 +144,8 @@ conf_pcr <- function(pcr){
 ```
 
 ```{r}
-# pls <- control.pls[[1]]
+# pls <- control.pls[[24]]
+# pls@modelDF
 conf_pls <- function(pls){
   #get scores and data
   scores <- pls %>%
@@ -153,7 +155,7 @@ conf_pls <- function(pls){
   #get predictive axis names
   predcomps <- colnames(scores) %>% syms()
   
-  data <- test$pca@suppLs$xModelMN
+  data <- pls@suppLs$xModelMN
   
   #figure out appropriate cutoff by solving for the r that gives p < 0.05 given n
   
@@ -164,7 +166,7 @@ conf_pls <- function(pls){
   cor(scores, data) %>%
     t() %>%
     as_tibble(rownames = "Variable") %>% 
-    mutate_if(is.numeric, funs(abs(.) > r)) %>% 
+    mutate_if(is.numeric, list(~abs(.) > r)) %>% 
     rowwise() %>% 
     mutate(detect_discr = any(!!!predcomps),
            is_discr = str_detect(Variable, "D"))
@@ -335,8 +337,8 @@ needle.p
 
 ```{r}
 panels <-
-  plot_grid(control.p + theme(legend.position = "none")+ coord_cartesian(xlim = c(0, 1)),
-            needle.p + theme(legend.position = "none")+ coord_cartesian(xlim = c(0, 1)),
+  plot_grid(control.p + theme(legend.position = "none")+ coord_cartesian(xlim = c(-0.5, 1)),
+            needle.p + theme(legend.position = "none")+ coord_cartesian(xlim = c(-0.5, 1)),
             nrow = 1,
             ncol = 2,
             labels = "AUTO")
