--- a/logistic R2 notes.Rmd
+++ b/logistic R2 notes.Rmd
@@ -3,6 +3,7 @@ title: "R Notebook"
 output: html_notebook
 ---
 ```{r}
+library(tidyverse)
 library(car)
 library(lmtest)
 library(broom)
@@ -16,7 +17,7 @@ Anova(m)
 lrtest(m)
 
 m0 <- glm(activ ~ 1, family = "binomial", data = beaver2)
-
+lrtest(m, m0) #equivalent
 ```
 
 # Mcfadden R2
@@ -47,7 +48,26 @@ yhat
 yhat <- augment(m, type.predict = "response")
 yhat %>%
   group_by(activ) %>% 
-  summarize(means = mean(.fitted)) %>% 
-  summarize(R2_tjur = diff(means))
+  summarize(means = mean(.fitted)) %>%
+  summarize(R2_tjur = diff(means)) %>%
+  as.numeric()
+```
+
+```{r}
+myfunc <- function(m){
+  lik.test <- lrtest(m)
+  mod.stats <-
+    broom::glance(m) %>% 
+    add_column(p.value = lik.test$`Pr(>Chisq)`[2],
+               R2Y = augment(m, type.predict = "response") %>% 
+                 group_by(activ) %>% #needs to be "group"
+                 summarize(means = mean(.fitted)) %>%
+                 summarize(R2_tjur = diff(means)) %>%
+                 as.numeric()
+    )
+  return(mod.stats)
+  
+}
+myfunc(m)
 ```
 
